2003-01-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Program and Library Variables): Clarify that
	_LIBADD is for libraries and _LDADD for programs.

	* automake.in (handle_source_transform): Correct typo from 2003-01-23.

2003-01-28  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/352:
	* automake.in (transform_variable_recursively): If the destination
	and the source variables are the same, delete the source variable
	before defining the destination variable.
	(handle_programs): Strip any $(EXEEXT) suffix from $one_file,
	or this will confuse handle_source_transform.
	(append_exeext): Rewrite using transform_variable_recursively.
	* tests/cond29.test, tests/cond30.test: New files.
	* tests/exeext.test: Run ./configure and make, this uncovered
	the above handle_programs issue.
	* tests/Makefile.am (TESTS): Add cond29.test and cond20.test.

	* automake.in (%subobjvar): Replace by ...
	(%gen_varname): ... this.
	(subobjname): Replace by ...
	(gen_varname): ... this.
	(initialize_per_input): Clean gen_varname instead of subobjname.
	(transform_variable_recursively): New function, extracted
	from define_objects_from_sources.
	(define_objects_from_sources): Use transform_variable_recursively.
	Remove the unused $parent argument.
	(handle_source_transform): Adjust call to define_objects_from_sources.

2003-01-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (@substfroms, @substtos): Move near
	traverse_variable_recursively.
	(traverse_variable_recursively, traverse_variable_recursively_worker):
	New functions, extracted from define_objects_from_sources.
	(define_objects_from_sources): Rewrite using
	traverse_variable_recursively.
	(handle_source_transform): Use variables_conditionally_defined
	instead of calling variable_conditions_recursive directly.
	Adjust the call to define_objects_from_sources; there is no need
	to reset @substtos, @substfroms, and %vars_scanned now.
	(variable_conditions_recursive): Rewrite using