@@ -241,6 +241,7 @@ libtool3.test \
 libtool4.test \
 libtool5.test \
 libtool6.test \
+libtool7.test \
 link_c_cxx.test	\
 link_dist.test \
 link_fc.test \
