@@ -1,5 +1,12 @@
 2003-01-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (handle_lib_objects_cond): Ignore -dlopen and
+	-dlpreopen in _LIBADD variables too.
+	(handle_LIBOBJS, handle_ALLOCA): New functions, extracted from
+	handle_lib_objects_cond.
+	* tests/libtool7.test: New file.
+	* tests/Makefile.am (TESTS): Add libtool7.test.
+
 	* automake.texi (Program and Library Variables): Clarify that
 	_LIBADD is for libraries and _LDADD for programs.
 
@@ -1978,7 +1985,7 @@
 	   verbose                 -> verb
 	* automake.texi	(Invoking Automake): Document -W and --warnings.
 	Remove the documentation for --Werror and --Wno-error.
-	* tests/defs: Use -Werror, no --Werror.
+	* tests/defs: Use -Werror, not --Werror.
 	* tests/exeext2.test: Test that the error message
 	is enabled with -Wobsolete.
 	* tests/output5.test: Rewrite to test that Automake complains
